[gd_scene format=3 uid="uid://wxq6c32fxkcc"]

[ext_resource type="Script" uid="uid://dehlq0ikdnnxb" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="Texture2D" uid="uid://b0dj3sdxqy4nr" path="res://assets/MenuBackground.png" id="2_mhnvy"]
[ext_resource type="Texture2D" uid="uid://bf08a1f8i7g7y" path="res://assets/StartButton.png" id="3_4ytvr"]
[ext_resource type="Texture2D" uid="uid://bem2nv7gmo74h" path="res://assets/QuitButton.png" id="4_g3eks"]
[ext_resource type="AudioStream" uid="uid://dlvjrq0yrbp4p" path="res://assets/audio/Fart techno #1.wav" id="5_4ytvr"]
[ext_resource type="Texture2D" uid="uid://bbuxcsum7y6te" path="res://assets/butt.png" id="6_g3eks"]

[node name="Menu" type="Control" unique_id=1708711621]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yqeox")

[node name="Background" type="TextureRect" parent="." unique_id=2086454724]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_mhnvy")
expand_mode = 2

[node name="MainContainer" type="VBoxContainer" parent="." unique_id=570249886]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MainContainer" unique_id=385988963]
layout_mode = 2
theme_override_constants/margin_bottom = 25

[node name="GameLabel" type="Label" parent="MainContainer/MarginContainer" unique_id=1055754478]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "In Your Face"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartWrapper" type="Control" parent="MainContainer" unique_id=568032546]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/StartWrapper" unique_id=1954066649]
custom_minimum_size = Vector2(1280, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -75.0
offset_right = 12166.0
offset_bottom = 1435.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)

[node name="StartButton" type="TextureButton" parent="MainContainer/StartWrapper/CenterContainer" unique_id=777129283]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_4ytvr")

[node name="ExitWrapper" type="Control" parent="MainContainer" unique_id=2050200975]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/ExitWrapper" unique_id=419169665]
custom_minimum_size = Vector2(1280, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -75.0
offset_right = 5759.9995
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)

[node name="ExitButton" type="TextureButton" parent="MainContainer/ExitWrapper/CenterContainer" unique_id=1225205916]
layout_mode = 2
texture_normal = ExtResource("4_g3eks")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1526141351]
stream = ExtResource("5_4ytvr")
autoplay = true

[node name="Butt" type="TextureRect" parent="." unique_id=1646502816]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1943.0001
offset_top = 501.0
offset_right = 2437.0
offset_bottom = 1386.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.9320794
texture = ExtResource("6_g3eks")
flip_h = true

[node name="Butt2" type="TextureRect" parent="." unique_id=2017023981]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -416.00003
offset_top = 962.0
offset_right = 77.99997
offset_bottom = 1847.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.9704767
texture = ExtResource("6_g3eks")

[connection signal="pressed" from="MainContainer/StartWrapper/CenterContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainContainer/ExitWrapper/CenterContainer/ExitButton" to="." method="_on_exit_button_pressed"]
